--- a/Pages/English/about.html
+++ b/Pages/English/about.html
@@ -176,11 +176,6 @@
       </div>
     </section>
 
-    <section>
-      <h2>What We Believe In</h2>
-      <p>We believe every local business deserves the chance to compete in the digital world without needing a huge budget or technical expertise. That’s why we focus on clarity, strategy, and honest results.</p>
-    </section>
-
     <section class="cta-section">
       <div class="cta-content">
         <h2>Ready to Grow Your Local Visibility?</h2>
@@ -190,26 +185,40 @@
     </section>
   </main>
 
-  <!-- SVG Divider -->
-  <div class="section-divider">
-    <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
-      <path class="divider-wave" d="M0,0 C600,50 600,50 1200,0 L1200,120 L0,120 Z"></path>
-    </svg>
-  </div>
-  <div class="section-divider" style="top: -1px;"> <!-- "top: -1px;" added to fuze SVGs -->
-    <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
-      <path class="divider-wave" d="M0,0 C300,100 900,0 1200,100 L1200,0 L0,0 Z"></path>
-    </svg>
-  </div>
-
   <footer class="footer scroll-fade">
     <div class="footer-inner">
-      <p>&copy; 2025 RankMind</p>
-      <p class="footer-links">
-        <a href="/Pages/English/privacy.html" target="_blank" rel="noopener noreferrer">Privacy Policy</a> |
-        <a href="/Pages/English/terms.html" target="_blank" rel="noopener noreferrer">Terms of Use</a> |
-        <a href="/Pages/English/accessibility.html" target="_blank" rel="noopener noreferrer">Accessibility</a>
-      </p>
+      <div class="footer-grid">
+        <div class="footer-col">
+          <h4>RankMind</h4>
+          <p>Clean code. Clear SEO. True visibility.</p>
+          <div class="social-links">
+            <a href="#" aria-label="Twitter">🐦</a>
+            <a href="#" aria-label="LinkedIn">💼</a>
+            <a href="#" aria-label="Facebook">📘</a>
+            <a href="#" aria-label="YouTube">▶️</a>
+          </div>
+        </div>
+        <div class="footer-col">
+          <h4>Pages</h4>
+          <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/Pages/English/about.html">About</a></li>
+            <li><a href="/Pages/English/services.html">Services</a></li>
+            <li><a href="/Pages/English/pricing.html">Pricing</a></li>
+            <li><a href="/Pages/English/contact.html">Contact</a></li>
+            <li><a href="/Pages/English/blog.html">Blog</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Legal</h4>
+          <ul>
+            <li><a href="/Pages/English/privacy.html">Privacy Policy</a></li>
+            <li><a href="/Pages/English/terms.html">Terms of Use</a></li>
+            <li><a href="/Pages/English/accessibility.html">Accessibility</a></li>
+          </ul>
+        </div>
+      </div>
+      <p class="footer-bottom">&copy; 2025 RankMind — All rights reserved.</p>
     </div>
   </footer>
 
