Center the navbar on big screen

--- a/Pages/English/contact.html
+++ b/Pages/English/contact.html
@@ -53,6 +53,9 @@
       </ul>
     </nav>
 
+    <!-- Invisible spacer balances the logo -->
+    <div class="header-spacer desktop-only"></div>
+
     <!-- Burger icon stays in header -->
     <div class="burger-icon mobile-only" onclick="toggleMenu()">☰</div>
   </header>
