--- a/Pages/English/services.html
+++ b/Pages/English/services.html
@@ -47,6 +47,9 @@
         <li><a href="./contact.html">Contact</a></li>
       </ul>
     </nav>
+    
+    <!-- Invisible spacer balances the logo -->
+    <div class="header-spacer desktop-only"></div>
 
     <!-- Burger icon stays in header -->
     <div class="burger-icon mobile-only" onclick="toggleMenu()">☰</div>
