Add social links

--- a/Pages/English/contact.html
+++ b/Pages/English/contact.html
@@ -91,6 +91,7 @@
           <p>Let's help your business get discovered — by Google, ChatGPT, and your local customers.</p>
           <ul class="contact-info">
             <li><strong>Email:</strong> <a href="mailto:contact@rankmind.net">contact@rankmind.net</a></li>
+            <li><strong>Phone:</strong> <a href="tel:+19494666676">+1 (949) 466-6676</a></li>
             <li><strong>Website:</strong> <a href="https://rankmind.net">www.rankmind.net</a></li>
             <li><strong>Location:</strong> Phoenix, USA</li>
           </ul>
@@ -101,17 +102,25 @@
 
   </main>
 
-<footer class="footer scroll-fade">
+  <footer class="footer scroll-fade">
     <div class="footer-inner">
       <div class="footer-grid">
         <div class="footer-col">
           <h4>RankMind</h4>
           <p>Clean code. Clear SEO. True visibility.</p>
           <div class="social-links">
-            <a href="#" aria-label="Twitter">🐦</a>
-            <a href="#" aria-label="LinkedIn">💼</a>
-            <a href="#" aria-label="Facebook">📘</a>
-            <a href="#" aria-label="YouTube">▶️</a>
+            <a href="https://x.com/Rank_Mind" target="_blank" aria-label="Twitter">
+              🐦
+            </a>
+            <a href="https://www.linkedin.com/in/rank-mind-95918a372/" target="_blank" aria-label="LinkedIn">
+              💼
+            </a>
+            <a href="https://facebook.com/rankmind" target="_blank" aria-label="Facebook">
+              📘
+            </a>
+            <a href="https://www.youtube.com/@Rank_Mind" target="_blank" aria-label="YouTube">
+              ▶️
+            </a>
           </div>
         </div>
         <div class="footer-col">
