--- a/Pages/English/services.html
+++ b/Pages/English/services.html
@@ -107,12 +107,46 @@
 
   <footer class="footer scroll-fade">
     <div class="footer-inner">
-      <p>&copy; 2025 RankMind</p>
-      <p class="footer-links">
-        <a href="/Pages/English/privacy.html" target="_blank" rel="noopener noreferrer">Privacy Policy</a> |
-        <a href="/Pages/English/terms.html" target="_blank" rel="noopener noreferrer">Terms of Use</a> |
-        <a href="/Pages/English/accessibility.html" target="_blank" rel="noopener noreferrer">Accessibility</a>
-      </p>
+      <div class="footer-grid">
+        <div class="footer-col">
+          <h4>RankMind</h4>
+          <p>Clean code. Clear SEO. True visibility.</p>
+          <div class="social-links">
+            <a href="https://x.com/Rank_Mind" target="_blank" aria-label="Twitter">
+              🐦
+            </a>
+            <a href="https://www.linkedin.com/in/rank-mind-95918a372/" target="_blank" aria-label="LinkedIn">
+              💼
+            </a>
+            <a href="https://facebook.com/rankmind" target="_blank" aria-label="Facebook">
+              📘
+            </a>
+            <a href="https://www.youtube.com/@Rank_Mind" target="_blank" aria-label="YouTube">
+              ▶️
+            </a>
+          </div>
+        </div>
+        <div class="footer-col">
+          <h4>Pages</h4>
+          <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/Pages/English/about.html">About</a></li>
+            <li><a href="/Pages/English/services.html">Services</a></li>
+            <li><a href="/Pages/English/pricing.html">Pricing</a></li>
+            <li><a href="/Pages/English/contact.html">Contact</a></li>
+            <li><a href="/Pages/English/blog.html">Blog</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Legal</h4>
+          <ul>
+            <li><a href="/Pages/English/privacy.html">Privacy Policy</a></li>
+            <li><a href="/Pages/English/terms.html">Terms of Use</a></li>
+            <li><a href="/Pages/English/accessibility.html">Accessibility</a></li>
+          </ul>
+        </div>
+      </div>
+      <p class="footer-bottom">&copy; 2025 RankMind — All rights reserved.</p>
     </div>
   </footer>
 
