--- a/Pages/English/about.html
+++ b/Pages/English/about.html
@@ -195,10 +195,18 @@
           <h4>RankMind</h4>
           <p>Clean code. Clear SEO. True visibility.</p>
           <div class="social-links">
-            <a href="#" aria-label="Twitter">🐦</a>
-            <a href="#" aria-label="LinkedIn">💼</a>
-            <a href="#" aria-label="Facebook">📘</a>
-            <a href="#" aria-label="YouTube">▶️</a>
+            <a href="https://x.com/Rank_Mind" target="_blank" aria-label="Twitter">
+              🐦
+            </a>
+            <a href="https://www.linkedin.com/in/rank-mind-95918a372/" target="_blank" aria-label="LinkedIn">
+              💼
+            </a>
+            <a href="https://facebook.com/rankmind" target="_blank" aria-label="Facebook">
+              📘
+            </a>
+            <a href="https://www.youtube.com/@Rank_Mind" target="_blank" aria-label="YouTube">
+              ▶️
+            </a>
           </div>
         </div>
         <div class="footer-col">
