Adjusting all pages to dark theme

--- a/Pages/English/contact.html
+++ b/Pages/English/contact.html
@@ -71,8 +71,8 @@
   </nav>
 
   <main class="content">
-    <h1>Let's Talk</h1>
-    <p>Have a website already? Want a full business launch? Contact us for a no-strings-attached consultation — we'll show you where you're missing traffic and how to fix it.</p>
+    <h1 class="page-title">Let's Talk</h1>
+    <p style="text-align: center; color: white;">Have a website already? Want a full business launch? Contact us for a no-strings-attached consultation — we'll show you where you're missing traffic and how to fix it.</p>
 
     <div class="contact-grid">
       <div class="contact-card">
