--- a/Pages/English/services.html
+++ b/Pages/English/services.html
@@ -66,43 +66,73 @@
   </nav>
 
   <main class="content">
-    <h1>What We Offer</h1>
-    <h2>Local SEO & Google Ranking</h2>
-    <ul class="service-list">
-      <li><strong>SEO Optimization:</strong> Make your site visible, fast, and search-engine friendly.</li>
-      <li>Google Business Profile setup (hours, service areas, photos, etc.)</li>
-      <li>Google Maps listing & optimization</li>
-      <li>Keyword strategy for top search results in your city</li>
-    </ul>
+    <h1 class="page-title">What We Offer</h1>
 
-    <h2>AI Chatbot Optimization</h2>
-    <p>
-      Google is still the most popular search engine in the world. But AI search platforms like ChatGPT are gaining traction. 
-      That means businesses looking to improve visibility should ensure that their websites are optimized for AI platforms as well.
-    </p>
-    <ul class="service-list">
-      <li>Make your business discoverable in AI tools like ChatGPT & Gemini</li>
-      <li>Natural-language content targeting user questions and prompts</li>
-      <li>Optimize files and structure for AI-readability</li>
-    </ul>
+    <section class="service-section">
+      <div class="service-text">
+        <h2>Local SEO & Google Ranking</h2>
+        <ul class="service-list">
+          <li><strong>SEO Optimization:</strong> Make your site visible, fast, and search-engine friendly.</li>
+          <li>Google Business Profile setup (hours, service areas, photos, etc.)</li>
+          <li>Google Maps listing & optimization</li>
+          <li>Keyword strategy for top search results in your city</li>
+        </ul>
+      </div>
+      <div class="service-animation">
+        <!-- Put your Lottie, GIF, or SVG animation here -->
+        <img src="path-to-seo-animation.gif" alt="SEO Animation" />
+      </div>
+    </section>
 
-    <h2>Custom, Lightweight Website Development</h2>
-    <ul class="service-list">
-      <li><strong>Custom Website Development:</strong> Tailored websites that speak your brand's voice.</li>
-      <li>Hand-coded websites with no templates or plugins</li>
-      <li>Mobile-first design and fast loading speeds</li>
-      <li><strong>UI/UX Design:</strong> Delightful interfaces with intuitive user flows.</li>
-      <li>Clean code and structured metadata for better SEO</li>
-      <li>Ongoing updates, animations, or custom features available</li>
-      <li><strong>Performance & Security:</strong> Fast, secure, and built to scale.</li>
-    </ul>
+    <section class="service-section">
+      <div class="service-text">
+        <h2>AI Chatbot Optimization</h2>
+        <p>
+          Google is still the most popular search engine in the world. But AI search platforms like ChatGPT are gaining traction.
+          That means businesses looking to improve visibility should ensure that their websites are optimized for AI platforms as well.
+        </p>
+        <ul class="service-list">
+          <li>Make your business discoverable in AI tools like ChatGPT & Gemini</li>
+          <li>Natural-language content targeting user questions and prompts</li>
+          <li>Optimize files and structure for AI-readability</li>
+        </ul>
+      </div>
+      <div class="service-animation">
+        <img src="path-to-ai-animation.gif" alt="AI Chatbot Animation" />
+      </div>
+    </section>
 
-    <h2>Social Media Presence</h2>
-    <ul class="service-list">
-      <li>Facebook & Instagram setup with branding & content guidance</li>
-      <li>Basic YouTube presence for video SEO</li>
-      <li>Connecting with local groups and hashtags</li>
-    </ul>
+    <section class="service-section">
+      <div class="service-text">
+        <h2>Custom, Lightweight Website Development</h2>
+        <ul class="service-list">
+          <li><strong>Custom Website Development:</strong> Tailored websites that speak your brand's voice.</li>
+          <li>Hand-coded websites with no templates or plugins</li>
+          <li>Mobile-first design and fast loading speeds</li>
+          <li><strong>UI/UX Design:</strong> Delightful interfaces with intuitive user flows.</li>
+          <li>Clean code and structured metadata for better SEO</li>
+          <li>Ongoing updates, animations, or custom features available</li>
+          <li><strong>Performance & Security:</strong> Fast, secure, and built to scale.</li>
+        </ul>
+      </div>
+      <div class="service-animation">
+        <img src="path-to-dev-animation.gif" alt="Web Dev Animation" />
+      </div>
+    </section>
+
+    <section class="service-section">
+      <div class="service-text">
+        <h2>Social Media Presence</h2>
+        <ul class="service-list">
+          <li>Facebook & Instagram setup with branding & content guidance</li>
+          <li>Basic YouTube presence for video SEO</li>
+          <li>Connecting with local groups and hashtags</li>
+        </ul>
+      </div>
+      <div class="service-animation">
+        <img src="path-to-social-animation.gif" alt="Social Media Animation" />
+      </div>
+    </section>
   </main>
 
   <footer class="footer scroll-fade">
