--- a/Pages/English/pricing.html
+++ b/Pages/English/pricing.html
@@ -65,59 +65,63 @@
     </ul>
   </nav>
 
-  <!-- This content need more love -->
   <main class="content">
-    <h1>Transparent Pricing</h1>
-    <p>We believe in clear, upfront pricing with no hidden fees. Whether you're just getting started or looking for enterprise-level solutions, we have a plan for you.</p>
+    <h1 class="page-title">Plans That Scale With Your Genius</h1>
     
     <div class="pricing-boxes">
-        <div class="price-card">
-            <h2>Starter</h2>
-            <p class="price">$199</p>
-            <p>Perfect for personal or small business websites.</p>
-        </div>
-        <div class="price-card">
-            <h2>Professional</h2>
-            <p class="price">$499</p>
-            <p>Ideal for growing businesses with more advanced needs.</p>
-        </div>
-        <div class="price-card">
-            <h2>Enterprise</h2>
-            <p class="price">Custom</p>
-            <p>Tailored solutions for large-scale digital projects.</p>
-        </div>
+      <div class="price-card">
+        <h2>Starter</h2>
+        <p class="price">$199</p>
+        <p>Perfect for personal or small business websites.</p>
+      </div>
+      <div class="price-card">
+        <h2>Professional</h2>
+        <p class="price">$499</p>
+        <p>Ideal for growing businesses with more advanced needs.</p>
+      </div>
+      <div class="price-card">
+        <h2>Enterprise</h2>
+        <p class="price">Custom</p>
+        <p>Tailored solutions for large-scale digital projects.</p>
+      </div>
     </div>
 
-    <section class="section pricing">
-      <h1>Pricing</h1>
-      <p>We believe in transparent pricing — no hidden fees, no subscriptions, and no monthly platform costs.</p>
+    <div class="pricing-details">
 
-      <h2>🔹 Basic Website Package — 1,500₪</h2>
-      <ul>
-        <li>Single-page site (About + Contact)</li>
-        <li>Mobile responsive and lightning-fast</li>
-        <li>Basic SEO setup</li>
-      </ul>
+      <div class="pricing-tier">
+        <h2>🔹 Basic Website Package — 1,500₪</h2>
+        <ul>
+          <li>Single-page site (About + Contact)</li>
+          <li>Mobile responsive and lightning-fast</li>
+          <li>Basic SEO setup</li>
+        </ul>
+      </div>
 
-      <h2>🔹 Business Launch Package — 2,900₪</h2>
-      <ul>
-        <li>Multi-page custom website (About, Services, Pricing, Contact)</li>
-        <li>Google Business setup</li>
-        <li>AI Chatbot optimization (ChatGPT, Gemini)</li>
-        <li>Full mobile and SEO optimization</li>
-      </ul>
+      <div class="pricing-tier">
+        <h2>🔹 Business Launch Package — 2,900₪</h2>
+        <ul>
+          <li>Multi-page custom website (About, Services, Pricing, Contact)</li>
+          <li>Google Business setup</li>
+          <li>AI Chatbot optimization (ChatGPT, Gemini)</li>
+          <li>Full mobile and SEO optimization</li>
+        </ul>
+      </div>
 
-      <h2>🔹 Full Visibility Package — Custom Quote</h2>
-      <ul>
-        <li>Includes everything from Business Launch</li>
-        <li>Social media setup + Google Ads integration</li>
-        <li>Ongoing SEO & content updates</li>
-        <li>Campaign strategy & analytics</li>
-      </ul>
+      <div class="pricing-tier">
+        <h2>🔹 Full Visibility Package — Custom Quote</h2>
+        <ul>
+          <li>Includes everything from Business Launch</li>
+          <li>Social media setup + Google Ads integration</li>
+          <li>Ongoing SEO & content updates</li>
+          <li>Campaign strategy & analytics</li>
+        </ul>
+      </div>
 
-      <p>💬 Need something custom or just starting out? <a href="contact.html">Contact us</a> for a free consultation.</p>
-    </section>
+      <div class="pricing-tier">
+        <p>💬 Need something custom or just starting out? <a href="contact.html">Contact us</a> for a free consultation.</p>
+      </div>
 
+    </div>
   </main>
 
   <footer class="footer scroll-fade">
