Restract the code, remove the extra opening page. And create beautiful URLs

--- a/Legal/Accessibilty/index.html
+++ b/Legal/Accessibilty/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Accessibility | RankMind</title>
-  <link rel="stylesheet" href="../../Styles/legal.css" />
+  <link rel="stylesheet" href="../legal.css" />
   <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico">
 </head>
 <body>
@@ -26,7 +26,7 @@
 
     <section>
       <h2>Feedback Welcome</h2>
-      <p>If you encounter any accessibility barriers, please <a href="../../Pages/English/contact.html">contact us</a> so we can work to improve the experience.</p>
+      <p>If you encounter any accessibility barriers, please <a href="../../Contact/index.html">contact us</a> so we can work to improve the experience.</p>
     </section>
   </main>
 </body>
