--- a/Legal/Privacy/index.html
+++ b/Legal/Privacy/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy | RankMind</title>
-  <link rel="stylesheet" href="../../Styles/legal.css" />
+  <link rel="stylesheet" href="../legal.css" />
   <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico">
 </head>
 <body>
@@ -42,7 +42,7 @@
 
     <section>
       <h2>Your Rights</h2>
-      <p>You can request to access, correct, or delete your data at any time. Contact us via our <a href="/Pages/English/contact.html">contact page</a>.</p>
+      <p>You can request to access, correct, or delete your data at any time. Contact us via our <a href="../../Contact/index.html">contact page</a>.</p>
     </section>
   </main>
 </body>
