--- a/Legal/Terms/index.html
+++ b/Legal/Terms/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Terms of Use | RankMind</title>
-  <link rel="stylesheet" href="../../Styles/legal.css" />
+  <link rel="stylesheet" href="../legal.css" />
   <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico">
 </head>
 <body>
