Improvement of title, contact form and footer style

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <meta name="author" content="RankMind">
   <link rel="canonical" href="https://www.rankmind.net/">
 
-  <meta property="og:title" content="RankMind">
+  <meta property="og:title" content="RankMind - Smart Digital Strategy">
   <meta property="og:description" content="Grow your business with expert SEO and marketing strategies.">
   <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png"> <!-- create this image Size: 1200×630px (recommended), Content: Logo + tagline + maybe a service image (clean and branded) -->
   <meta property="og:url" content="https://www.rankmind.net/">
   <meta property="og:type" content="website">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="RankMind">
+  <meta name="twitter:title" content="RankMind - Smart Digital Strategy">
   <meta name="twitter:description" content="Expert marketing and SEO services for modern businesses.">
   <meta name="twitter:image" content="https://www.rankmind.net/Images/share-preview.png">
 
