Create pricing table

--- a/Pricing/index.html
+++ b/Pricing/index.html
@@ -25,6 +25,7 @@
   <title>Pricing | RankMind</title>
   <link rel="stylesheet" href="../Styles/ui.css">
   <link rel="stylesheet" href="../Styles/pages.css">
+  <link rel="stylesheet" href="./pricing.css">
   <link rel="stylesheet" href="../Styles/footer.css">
   <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
 </head>
@@ -71,57 +72,114 @@
     <div class="pricing-boxes">
       <div class="price-card">
         <h2>Starter</h2>
-        <p class="price">$199</p>
+        <p class="price">$999</p>
         <p>Perfect for personal or small business websites.</p>
+        <ul class="feature-checklist">
+          <li>✅ 1-page website</li>
+          <li>✅ Mobile responsive</li>
+          <li>✅ Basic SEO setup</li>
+        </ul>
+        <a href="../Contact/" class="choose-plan">Choose Plan</a>
       </div>
       <div class="price-card">
         <h2>Professional</h2>
-        <p class="price">$499</p>
+        <p class="price">$1,399</p>
         <p>Ideal for growing businesses with more advanced needs.</p>
+        <ul class="feature-checklist">
+          <li>✅ _______</li>
+          <li>✅ _______</li>
+          <li>✅ _______</li>
+        </ul>
+        <a href="../Contact/" class="choose-plan">Choose Plan</a>
       </div>
       <div class="price-card">
         <h2>Enterprise</h2>
         <p class="price">Custom</p>
         <p>Tailored solutions for large-scale digital projects.</p>
+        <ul class="feature-checklist">
+          <li>✅ _______</li>
+          <li>✅ _______</li>
+          <li>✅ _______</li>
+        </ul>
+        <a href="../Contact/" class="choose-plan">Choose Plan</a>
       </div>
     </div>
 
-    <div class="pricing-details">
-
-      <div class="pricing-tier">
-        <h2>🔹 Basic Website Package — 1,500₪</h2>
-        <ul>
-          <li>Single-page site (About + Contact)</li>
-          <li>Mobile responsive and lightning-fast</li>
-          <li>Basic SEO setup</li>
-        </ul>
-      </div>
-
-      <div class="pricing-tier">
-        <h2>🔹 Business Launch Package — 2,900₪</h2>
-        <ul>
-          <li>Multi-page custom website (About, Services, Pricing, Contact)</li>
-          <li>Google Business setup</li>
-          <li>AI Chatbot optimization (ChatGPT, Gemini)</li>
-          <li>Full mobile and SEO optimization</li>
-        </ul>
-      </div>
-
-      <div class="pricing-tier">
-        <h2>🔹 Full Visibility Package — Custom Quote</h2>
-        <ul>
-          <li>Includes everything from Business Launch</li>
-          <li>Social media setup + Google Ads integration</li>
-          <li>Ongoing SEO & content updates</li>
-          <li>Campaign strategy & analytics</li>
-        </ul>
-      </div>
-
-      <div class="pricing-tier">
-        <p>💬 Need something custom or just starting out? <a href="../Contact/">Contact us</a> for a free consultation.</p>
-      </div>
-
-    </div>
+    <section class="pricing-comparison">
+      <table class="comparison-table">
+        <thead>
+          <tr>
+            <th>Features</th>
+            <th>Starter<br><span class="price-tag">$999</span></th>
+            <th>Professional<br><span class="price-tag">$1,399</span></th>
+            <th>Enterprise<br><span class="price-tag">Custom</span></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1-page website (About + Contact)</td>
+            <td>✅</td>
+            <td>✅</td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>Multi-page website</td>
+            <td></td>
+            <td>✅</td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>Mobile responsive & fast</td>
+            <td>✅</td>
+            <td>✅</td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>Basic SEO setup</td>
+            <td>✅</td>
+            <td>✅</td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>Google Business setup</td>
+            <td></td>
+            <td>✅</td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>AI Chatbot optimization (ChatGPT, Gemini)</td>
+            <td></td>
+            <td>✅</td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>Social media setup + Google Ads</td>
+            <td></td>
+            <td></td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>Ongoing SEO & content updates</td>
+            <td></td>
+            <td></td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td>Campaign strategy & analytics</td>
+            <td></td>
+            <td></td>
+            <td>✅</td>
+          </tr>
+          <tr>
+            <td></td>
+            <td><a href="../Contact/" class="choose-plan">Choose</a></td>
+            <td><a href="../Contact/" class="choose-plan">Choose</a></td>
+            <td><a href="../Contact/" class="choose-plan">Request Quote</a></td>
+          </tr>
+        </tbody>
+      </table>
+      <p class="compare-note">💬 Need something custom or just starting out? <a href="../Contact/">Contact us</a> for a free consultation.</p>
+    </section>
   </main>
 
   <footer class="footer scroll-fade">
