--- a/Pricing/index.html
+++ b/Pricing/index.html
@@ -190,19 +190,19 @@
           <p>Clean code. Clear SEO. True visibility.</p>
           <div class="social-links">
             <a href="https://www.linkedin.com/in/rank-mind-95918a372/" target="_blank" aria-label="LinkedIn">
-              <img src="../Images/linkedin.PNG" alt="LinkedIn" width="24" height="24">
+              <img src="../Images/linkedin.png" alt="LinkedIn" width="24" height="24">
             </a>
             <a href="https://x.com/Rank_Mind" target="_blank" aria-label="Twitter">
               <img src="../Images/x.png" alt="X" width="24" height="24">
             </a>
             <a href="https://facebook.com/rankmind" target="_blank" aria-label="Facebook">
-              <img src="../Images/facebook.PNG" alt="Facebook" width="24" height="24">
+              <img src="../Images/facebook.png" alt="Facebook" width="24" height="24">
             </a>
             <a href="https://www.instagram.com/rank.mind/" target="_blank" aria-label="Instagram">
-              <img src="../Images/instagram.PNG" alt="Instagram" width="24" height="24">
+              <img src="../Images/instagram.png" alt="Instagram" width="24" height="24">
             </a>
             <a href="https://www.youtube.com/@Rank_Mind" target="_blank" aria-label="YouTube">
-              <img src="../Images/youtube.PNG" alt="YouTube" width="24" height="24">
+              <img src="../Images/youtube.png" alt="YouTube" width="24" height="24">
             </a>
           </div>
         </div>
