Add video to the main page

--- a/Services/index.html
+++ b/Services/index.html
@@ -135,6 +135,15 @@
     </section>
   </main>
 
+  <div class="fab-container">
+    <button class="fab-main" id="fabToggle">!</button>
+    <div class="fab-options" id="fabOptions">
+      <a href="tel:+19494666676" class="fab-icon" title="Call Us">📞</a>
+      <a href="https://wa.me/19494666676" target="_blank" class="fab-icon" title="WhatsApp">💬</a>
+      <a href="./Legal/Accessibilty/index.html" target="_blank" class="fab-icon" title="Accessibility Info">♿</a>
+    </div>
+  </div>
+
   <footer class="footer scroll-fade">
     <div class="footer-inner">
       <div class="footer-grid">
