--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
   </nav>
 
   <section class="hero-section">
+    <video autoplay muted loop playsinline class="hero-bg-video">
+      <source src="./Videos/tech-bg.mp4" type="video/mp4" />
+      <!-- Optional fallback image -->
+    </video>
     <div class="hero-content">
       <h1>Rise Above the Noise</h1>
       <p>Get discovered by Google, ChatGPT, and the AI-powered future.</p>
