--- a/Pricing/index.html
+++ b/Pricing/index.html
@@ -202,7 +202,7 @@
               <img src="../Images/linkedin.png" alt="LinkedIn" width="24" height="24">
             </a>
             <a href="https://x.com/Rank_Mind" target="_blank" aria-label="Twitter">
-              <img src="../Images/x.png" alt="X" width="24" height="24">
+              <img src="../Images/twitter.png" alt="X" width="24" height="24">
             </a>
             <a href="https://facebook.com/rankmind" target="_blank" aria-label="Facebook">
               <img src="../Images/facebook.png" alt="Facebook" width="24" height="24">
