Add cta button to Hero section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
             we give you the digital edge: clean code, clear SEO, and true visibility in the age of AI.
         </p>
       </div>
+      <br>
+      <a href="./Contact/" class="cta-button">Contact Us</a>
     </section>
 
     <section class="how-we-work">
