--- a/Contact/index.html
+++ b/Contact/index.html
@@ -91,8 +91,9 @@
           </ul>
           <h2>Free Consultation</h2>
           <div>
-            <a href="tel:+19494666676" aria-label="Call Us">Phone</a>
-            <a href="https://wa.me/19494666676" target="_blank" aria-label="Chat on WhatsApp">WhatsApp</a>
+            <a href="tel:+19494666676" class="fab-icon" title="Call Us">📞</a>
+            <br>
+            <a href="https://wa.me/19494666676" target="_blank" class="fab-icon" title="WhatsApp">💬</a>
           </div>
         </section>
       </div>
