add part about icons

--- a/index.html
+++ b/index.html
@@ -160,12 +160,16 @@
           <p>Your website will load instantly, optimized for both mobile and desktop users.</p>
         </div>
         <div class="benefit-item">
-          <div class="icon">📍</div>
+          <div class="icon">
+            <img src="/Assets/googlemaps.svg" alt="Google Maps Icon" />
+          </div>
           <h3>Local SEO Experts</h3>
           <p>We specialize in helping local businesses rank high on Google Maps & organic search.</p>
         </div>
         <div class="benefit-item">
-          <div class="icon">🤖</div>
+          <div class="icon">
+            <img src="/Assets/openai.svg" alt="OpenAI" />
+          </div>
           <h3>AI-Ready</h3>
           <p>Your business will be visible to AI like ChatGPT, Google Gemini, and future AI agents.</p>
         </div>
@@ -180,7 +184,9 @@
           <p>Static sites with no backend attack surface — clean, fast, and secure.</p>
         </div>
         <div class="benefit-item">
-          <div class="icon">📞</div>
+          <div class="icon">
+            <img src="./Assets/whatsapp.svg" alt="WhatsApp" />
+          </div>
           <h3>Human Support</h3>
           <p>Work with a real person, not a call center. We're responsive and transparent.</p>
         </div>
