Main page icons and SVGs adding

--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
       <h2>Why Choose Rank Mind?</h2>
       <div class="benefits-grid">
         <div class="benefit-item">
-          <div class="icon">⚡</div>
+          <div class="icon">
+            <img src="/Assets/rabbit.svg" alt="Speed site" />
+          </div>
           <h3>Speed First</h3>
           <p>Your website will load instantly, optimized for both mobile and desktop users.</p>
         </div>
@@ -174,12 +176,16 @@
           <p>Your business will be visible to AI like ChatGPT, Google Gemini, and future AI agents.</p>
         </div>
         <div class="benefit-item">
-          <div class="icon">🛠️</div>
+          <div class="icon">
+            <img src="/Assets/settings.svg" alt="Build" />
+          </div>
           <h3>Custom Built</h3>
           <p>No WordPress. No clutter. Just clean, handcrafted code built to convert.</p>
         </div>
         <div class="benefit-item">
-          <div class="icon">🔒</div>
+          <div class="icon">
+            <img src="/Assets/shield.svg" alt="Security" />
+          </div>
           <h3>Secure by Design</h3>
           <p>Static sites with no backend attack surface — clean, fast, and secure.</p>
         </div>
