Fixing all icons

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
       <div class="benefits-grid">
         <div class="benefit-item">
           <div class="icon">
-            <img src="/Assets/rabbit.svg" alt="Speed site" />
+            <img src="/Assets/openai.svg" alt="OpenAI" />
           </div>
-          <h3>Speed First</h3>
-          <p>Your website will load instantly, optimized for both mobile and desktop users.</p>
+          <h3>AI-Ready</h3>
+          <p>Your business will be visible to AI like ChatGPT, Google Gemini, and future AI agents.</p>
         </div>
         <div class="benefit-item">
           <div class="icon">
@@ -170,10 +170,10 @@
         </div>
         <div class="benefit-item">
           <div class="icon">
-            <img src="/Assets/openai.svg" alt="OpenAI" />
+            <img src="/Assets/rabbit.svg" alt="Speed site" />
           </div>
-          <h3>AI-Ready</h3>
-          <p>Your business will be visible to AI like ChatGPT, Google Gemini, and future AI agents.</p>
+          <h3>Speed First</h3>
+          <p>Your website will load instantly, optimized for both mobile and desktop users.</p>
         </div>
         <div class="benefit-item">
           <div class="icon">
@@ -209,11 +209,19 @@
   </main>
 
   <div class="fab-container">
-    <button class="fab-main" id="fabToggle">!</button>
+    <button class="fab-main" id="fabToggle">
+      <img src="./Assets/info.svg" alt="Info" />
+    </button>
     <div class="fab-options" id="fabOptions">
-      <a href="tel:+19494666676" class="fab-icon" title="Call Us">📞</a>
-      <a href="https://wa.me/19494666676" target="_blank" class="fab-icon" title="WhatsApp">💬</a>
-      <a href="./Legal/Accessibilty/index.html" target="_blank" class="fab-icon" title="Accessibility Info">♿</a>
+      <a href="tel:+19494666676" class="fab-icon" title="Call Us">
+        <img src="./Assets/phone-call.svg" alt="Phone" />
+      </a>
+      <a href="https://wa.me/19494666676" target="_blank" class="fab-icon" title="WhatsApp">
+        <img src="./Assets/message.svg" alt="WhatsApp" />
+      </a>
+      <a href="./Legal/Accessibilty/index.html" target="_blank" class="fab-icon" title="Accessibility Info">
+        <img src="./Assets/accessibility.svg" alt="Accessibility" />
+      </a>
     </div>
   </div>
 
