--- a/Contact/index.html
+++ b/Contact/index.html
@@ -91,9 +91,13 @@
           </ul>
           <h2>Free Consultation</h2>
           <div>
-            <a href="tel:+19494666676" class="fab-icon" title="Call Us">📞</a>
+            <a href="tel:+19494666676" class="fab-icon" title="Call Us">
+              <img src="../Assets/phone-call.svg" alt="Phone" />
+            </a>
             <br>
-            <a href="https://wa.me/19494666676" target="_blank" class="fab-icon" title="WhatsApp">💬</a>
+            <a href="https://wa.me/19494666676" target="_blank" class="fab-icon" title="WhatsApp">
+              <img src="../Assets/message.svg" alt="WhatsApp" />
+            </a>
           </div>
         </section>
       </div>
@@ -101,11 +105,19 @@
   </main>
 
   <div class="fab-container">
-    <button class="fab-main" id="fabToggle">!</button>
+    <button class="fab-main" id="fabToggle">
+      <img src="../Assets/info.svg" alt="Info" />
+    </button>
     <div class="fab-options" id="fabOptions">
-      <a href="tel:+19494666676" class="fab-icon" title="Call Us">📞</a>
-      <a href="https://wa.me/19494666676" target="_blank" class="fab-icon" title="WhatsApp">💬</a>
-      <a href="./Legal/Accessibilty/index.html" target="_blank" class="fab-icon" title="Accessibility Info">♿</a>
+      <a href="tel:+19494666676" class="fab-icon" title="Call Us">
+        <img src="../Assets/phone-call.svg" alt="Phone" />
+      </a>
+      <a href="https://wa.me/19494666676" target="_blank" class="fab-icon" title="WhatsApp">
+        <img src="../Assets/message.svg" alt="WhatsApp" />
+      </a>
+      <a href="./Legal/Accessibilty/index.html" target="_blank" class="fab-icon" title="Accessibility Info">
+        <img src="../Assets/accessibility.svg" alt="Accessibility" />
+      </a>
     </div>
   </div>
 
