--- a/Pricing/index.html
+++ b/Pricing/index.html
@@ -183,11 +183,19 @@
   </main>
 
   <div class="fab-container">
-    <button class="fab-main" id="fabToggle">!</button>
+    <button class="fab-main" id="fabToggle">
+      <img src="../Assets/info.svg" alt="Info" />
+    </button>
     <div class="fab-options" id="fabOptions">
-      <a href="tel:+19494666676" class="fab-icon" title="Call Us">📞</a>
-      <a href="https://wa.me/19494666676" target="_blank" class="fab-icon" title="WhatsApp">💬</a>
-      <a href="./Legal/Accessibilty/index.html" target="_blank" class="fab-icon" title="Accessibility Info">♿</a>
+      <a href="tel:+19494666676" class="fab-icon" title="Call Us">
+        <img src="../Assets/phone-call.svg" alt="Phone" />
+      </a>
+      <a href="https://wa.me/19494666676" target="_blank" class="fab-icon" title="WhatsApp">
+        <img src="../Assets/message.svg" alt="WhatsApp" />
+      </a>
+      <a href="./Legal/Accessibilty/index.html" target="_blank" class="fab-icon" title="Accessibility Info">
+        <img src="../Assets/accessibility.svg" alt="Accessibility" />
+      </a>
     </div>
   </div>
 
@@ -199,19 +207,19 @@
           <p>Clean code. Clear SEO. True visibility.</p>
           <div class="social-links">
             <a href="https://www.linkedin.com/in/rank-mind-95918a372/" target="_blank" aria-label="LinkedIn">
-              <img src="../Images/linkedin.png" alt="LinkedIn" width="24" height="24">
+              <img src="../Images/linkedin.PNG" alt="LinkedIn" width="24" height="24">
             </a>
             <a href="https://x.com/Rank_Mind" target="_blank" aria-label="Twitter">
               <img src="../Images/twitter.png" alt="X" width="24" height="24">
             </a>
             <a href="https://facebook.com/rankmind" target="_blank" aria-label="Facebook">
-              <img src="../Images/facebook.png" alt="Facebook" width="24" height="24">
+              <img src="../Images/facebook.PNG" alt="Facebook" width="24" height="24">
             </a>
             <a href="https://www.instagram.com/rank.mind/" target="_blank" aria-label="Instagram">
-              <img src="../Images/instagram.png" alt="Instagram" width="24" height="24">
+              <img src="../Images/instagram.PNG" alt="Instagram" width="24" height="24">
             </a>
             <a href="https://www.youtube.com/@Rank_Mind" target="_blank" aria-label="YouTube">
-              <img src="../Images/youtube.png" alt="YouTube" width="24" height="24">
+              <img src="../Images/youtube.PNG" alt="YouTube" width="24" height="24">
             </a>
           </div>
         </div>
