--- a/Services/index.html
+++ b/Services/index.html
@@ -136,11 +136,19 @@
   </main>
 
   <div class="fab-container">
-    <button class="fab-main" id="fabToggle">!</button>
+    <button class="fab-main" id="fabToggle">
+      <img src="../Assets/info.svg" alt="Info" />
+    </button>
     <div class="fab-options" id="fabOptions">
-      <a href="tel:+19494666676" class="fab-icon" title="Call Us">📞</a>
-      <a href="https://wa.me/19494666676" target="_blank" class="fab-icon" title="WhatsApp">💬</a>
-      <a href="./Legal/Accessibilty/index.html" target="_blank" class="fab-icon" title="Accessibility Info">♿</a>
+      <a href="tel:+19494666676" class="fab-icon" title="Call Us">
+        <img src="../Assets/phone-call.svg" alt="Phone" />
+      </a>
+      <a href="https://wa.me/19494666676" target="_blank" class="fab-icon" title="WhatsApp">
+        <img src="../Assets/message.svg" alt="WhatsApp" />
+      </a>
+      <a href="./Legal/Accessibilty/index.html" target="_blank" class="fab-icon" title="Accessibility Info">
+        <img src="../Assets/accessibility.svg" alt="Accessibility" />
+      </a>
     </div>
   </div>
 
