Dynamic burger icon

--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
     <div class="header-spacer desktop-only"></div>
 
     <!-- Burger icon stays in header -->
-    <div class="burger-icon mobile-only" onclick="toggleMenu()">☰</div>
+    <div class="burger-icon mobile-only" onclick="toggleMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </header>
 
   <!-- Mobile Navigation (outside header) -->
@@ -83,13 +87,17 @@
       <div class="intro-inner">
         <h2>What We Do</h2>
         <p>
-          At RankMind, we help your business stand out where it counts — in Google, ChatGPT,
-           and the AI-powered tools shaping modern search. Whether you're a small shop or a growing brand,
+          At RankMind, we help your business stand out where it counts - in Google, ChatGPT,
+           and the AI-powered tools. 
+        </p>
+        <br>
+        <a href="./Contact/" class="cta-button">Contact Us</a>
+        <br>
+        <p>
+          Whether you're a small shop or a growing brand,
             we give you the digital edge: clean code, clear SEO, and true visibility in the age of AI.
         </p>
       </div>
-      <br>
-      <a href="./Contact/" class="cta-button">Contact Us</a>
     </section>
 
     <section class="how-we-work">
@@ -97,7 +105,7 @@
       <div class="features-grid">
         <div class="feature-item">
           <h3>Hand-Coded Sites</h3>
-          <p>We craft fast-loading websites with clean, scalable HTML, CSS, and JavaScript — no bloated templates.</p>
+          <p>We craft fast-loading websites with clean and scalable code — no bloated templates.</p>
         </div>
         <div class="feature-item">
           <h3>Crystal-Clear SEO</h3>
