--- a/Pricing/index.html
+++ b/Pricing/index.html
@@ -53,7 +53,11 @@
     <div class="header-spacer desktop-only"></div>
 
     <!-- Burger icon stays in header -->
-    <div class="burger-icon mobile-only" onclick="toggleMenu()">☰</div>
+    <div class="burger-icon mobile-only" onclick="toggleMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </header>
 
   <!-- Mobile Navigation (outside header) -->
