Update contect in pricing page

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <img src="/Assets/settings.svg" alt="Build" />
           </div>
           <h3>Custom Built</h3>
-          <p>No WordPress. No clutter. Just clean, handcrafted code built to convert.</p>
+          <p>No WordPress. No clutter. Just clean code built to convert.</p>
         </div>
         <div class="benefit-item">
           <div class="icon">
