Immersive side navbar

--- a/Pricing/index.html
+++ b/Pricing/index.html
@@ -175,6 +175,12 @@
             <td>✅</td>
           </tr>
           <tr>
+            <td>Real time marketing</td>
+            <td></td>
+            <td></td>
+            <td>✅</td>
+          </tr>
+          <tr>
             <td>Google ads campaign managment</td>
             <td>✅</td>
             <td>✅</td>
