--- a/Services/index.html
+++ b/Services/index.html
@@ -25,6 +25,7 @@
   <title>Services | RankMind</title>
   <link rel="stylesheet" href="../Styles/ui.css">
   <link rel="stylesheet" href="../Styles/pages.css">
+  <link rel="stylesheet" href="./services.css">
   <link rel="stylesheet" href="../Styles/footer.css">
   <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
 </head>
@@ -69,72 +70,112 @@
     </ul>
   </nav>
 
-  <main class="content">
+  <main class="content services-content">
     <h1 class="page-title">What We Offer</h1>
 
-    <section class="service-section">
-      <div class="service-text">
-        <h2>Local SEO & Google Ranking</h2>
-        <ul class="service-list">
-          <li><strong>SEO Optimization:</strong> Make your site visible, fast, and search-engine friendly.</li>
-          <li>Google Business Profile setup (hours, service areas, photos, etc.)</li>
-          <li>Google Maps listing & optimization</li>
-          <li>Keyword strategy for top search results in your city</li>
+    <!-- Section: Search Visibility -->
+    <section class="service-group">
+      <h2 class="group-title">🔍 Search Visibility</h2>
+      <div class="service-card" data-service="seo">
+        <h3>Google SEO – Organic Domination</h3>
+      </div>
+      <div class="service-detail" id="seo">
+        <ul>
+          <li>Local SEO to appear on Google Maps</li>
+          <li>On-page & technical SEO for websites</li>
+          <li>Google Business Profile optimization (photos, reviews, Q&A)</li>
+          <li>Competitive analysis & positioning</li>
+          <li>Targeted keyword research</li>
+          <li>Review generation and reputation building</li>
+          <li>Structured data + schema markup</li>
+          <li>Lightweight website for better rankings</li>
         </ul>
       </div>
-      <div class="service-animation">
-        <!-- Put your Lottie, GIF, or SVG animation here -->
-        <img src="path-to-seo-animation.gif" alt="SEO Animation" />
+
+      <div class="service-card" data-service="ai-seo">
+        <h3>AI Platform SEO – The Future of Search</h3>
+      </div>
+      <div class="service-detail" id="ai-seo">
+        <ul>
+          <li>Rank in ChatGPT, Gemini, Grok & others</li>
+          <li>Clean, fast-loading structure for AI-readability</li>
+          <li>Conversational SEO for voice/chat-based searches</li>
+          <li>Integrate into AI-accessible data formats</li>
+        </ul>
       </div>
     </section>
 
-    <section class="service-section">
-      <div class="service-text">
-        <h2>AI Chatbot Optimization</h2>
-        <p>
-          Google is still the most popular search engine in the world. But AI search platforms like ChatGPT are gaining traction.
-          That means businesses looking to improve visibility should ensure that their websites are optimized for AI platforms as well.
-        </p>
-        <ul class="service-list">
-          <li>Make your business discoverable in AI tools like ChatGPT & Gemini</li>
-          <li>Natural-language content targeting user questions and prompts</li>
-          <li>Optimize files and structure for AI-readability</li>
+    <!-- Section: Advertising & Reach -->
+    <section class="service-group">
+      <h2 class="group-title">💰 Advertising & Reach</h2>
+
+      <div class="service-card" data-service="google-ads">
+        <h3>Google Ads – Instant Visibility</h3>
+      </div>
+      <div class="service-detail" id="google-ads">
+        <ul>
+          <li>Search & Display ad campaigns</li>
+          <li>Call-only ads for service businesses</li>
+          <li>Google Guaranteed Setup (for eligible industries)</li>
+          <li>Landing page optimization for conversions</li>
+          <li>Budget strategy & ROI tracking</li>
         </ul>
       </div>
-      <div class="service-animation">
-        <img src="path-to-ai-animation.gif" alt="AI Chatbot Animation" />
+
+      <div class="service-card" data-service="meta-ads">
+        <h3>Meta Ads – Facebook & Instagram</h3>
+      </div>
+      <div class="service-detail" id="meta-ads">
+        <ul>
+          <li>Full-funnel campaigns: Awareness → Leads → Retargeting</li>
+          <li>Pixel setup and conversion tracking</li>
+          <li>Organic strategy (posts, reels, hashtags)</li>
+          <li>Community targeting through local groups</li>
+        </ul>
+      </div>
+
+      <div class="service-card" data-service="platform-ads">
+        <h3>Platform-Specific Ads – Hyperlocal Reach</h3>
+      </div>
+      <div class="service-detail" id="platform-ads">
+        <ul>
+          <li>Thumbtack & Yelp ad strategy + bidding</li>
+          <li>Bing Ads setup & optimization</li>
+          <li>Directory promotion (Nextdoor, Angi, etc.)</li>
+        </ul>
       </div>
     </section>
 
-    <section class="service-section">
-      <div class="service-text">
-        <h2>Custom, Lightweight Website Development</h2>
-        <ul class="service-list">
-          <li><strong>Custom Website Development:</strong> Tailored websites that speak your brand's voice.</li>
-          <li>Hand-coded websites with no templates or plugins</li>
-          <li>Mobile-first design and fast loading speeds</li>
-          <li><strong>UI/UX Design:</strong> Delightful interfaces with intuitive user flows.</li>
-          <li>Clean code and structured metadata for better SEO</li>
-          <li>Ongoing updates, animations, or custom features available</li>
-          <li><strong>Performance & Security:</strong> Fast, secure, and built to scale.</li>
-        </ul>
+    <!-- Section: Brand & Engagement -->
+    <section class="service-group">
+      <h2 class="group-title">🎨 Brand & Engagement</h2>
+
+      <div class="service-card" data-service="branding">
+        <h3>Branding & Content</h3>
       </div>
-      <div class="service-animation">
-        <img src="path-to-dev-animation.gif" alt="Web Dev Animation" />
+      <div class="service-detail" id="branding">
+        <ul>
+          <li>Logo & brand kit creation</li>
+          <li>Business naming + slogans</li>
+          <li>Social media content packs (posts + stories)</li>
+          <li>Company video trailers or explainers</li>
+        </ul>
       </div>
     </section>
 
-    <section class="service-section">
-      <div class="service-text">
-        <h2>Social Media Presence</h2>
-        <ul class="service-list">
-          <li>Facebook & Instagram setup with branding & content guidance</li>
-          <li>Basic YouTube presence for video SEO</li>
-          <li>Connecting with local groups and hashtags</li>
-        </ul>
+    <!-- Section: Conversion Tools -->
+    <section class="service-group">
+      <h2 class="group-title">💬 Conversion Tools</h2>
+
+      <div class="service-card" data-service="chatbot">
+        <h3>AI Chatbot Integration</h3>
       </div>
-      <div class="service-animation">
-        <img src="path-to-social-animation.gif" alt="Social Media Animation" />
+      <div class="service-detail" id="chatbot">
+        <ul>
+          <li>Custom chatbot with business personality</li>
+          <li>Lead capture, FAQs, call booking</li>
+          <li>Works 24/7 to help close leads</li>
+        </ul>
       </div>
     </section>
   </main>
@@ -204,5 +245,6 @@
   </footer>
 
   <script src="../Scripts/ui.js"></script>
+  <script src="./services.js"></script>
 </body>
 </html>
